# deep-archive

./: .gitignore  README.md  setup.sh
deep-archive/: Cargo.toml
deep-archive/src/archive/: mod.rs
deep-archive/src/database/: schema.rs
deep-archive/src/ingest/: scanner.rs
deep-archive/src/media/: ffmpeg.rs  mimetype.rs  mod.rs
deep-archive/src/ml/: engine.rs  pipeline.rs
src/: main.rs
src/archive/: iso_builder.rs
src/database/: repo.rs
src/ingest/: hasher.rs  mod.rs
src/ml/: engine.rs  pipeline.rs
src/utils/: config.rs
